Adding links/routing functionality to Components : using react-router-dom

--- a/test-react-app/src/index.css
+++ b/test-react-app/src/index.css
@@ -5,9 +5,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 20p;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+li {
+  display: inline;
+  padding: 10px;
+}
+
+li:hover {
+  background-color: beige;
+}
+
+.container {
+  border: 2px grey solid;
+  width: 600px;
+  padding: 10px;
+  margin: 10px;
 }
